<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F68159"
    tools:context=".teacherLogin">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="277dp"
        android:layout_height="134dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.042"
        app:srcCompat="@drawable/reading" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="40dp"

        android:drawableStart="@drawable/ic_action_user"
        android:drawableLeft="@drawable/ic_action_user"
        android:text=""
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.208"
        tools:text="Username"
        tools:textSize="18sp"
        android:inputType="none|text"
        android:hint="@string/username"
        android:autofillHints="on"
        />

    <EditText
        android:id="@+id/textView3"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:text=""
        android:drawableStart="@drawable/ic_action_lock"
        android:drawableLeft="@drawable/ic_action_lock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.503"
        tools:text="Password"
        android:hint="@string/password"
        android:autofillHints="on"

        android:inputType="none|textPassword"
        tools:textSize="18sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="289dp"
        android:layout_height="42dp"
        app:cardBackgroundColor="@color/colorPrimary"

        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.287">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimary"
                android:text="@string/login"

                tools:textSize="18sp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F68159"
        android:text="@string/not_a_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.448" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>