<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#243587"
    android:label="@string/app_name"
    tools:ignore="MissingDefaultResource"
    tools:context=".DashBoardActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/dashboard1"
        android:layout_width="0dp"
        android:layout_height="511dp"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button15"
        app:layout_constraintVertical_bias="0.598">

        <Button
            android:id="@+id/button3"
            android:layout_width="81dp"
            android:layout_height="96dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/fees2"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.886" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/button8"
        android:layout_width="109dp"
        android:layout_height="142dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/courses"
        android:contentDescription="@string/module"
        app:layout_constraintEnd_toEndOf="@+id/dashboard1"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="@+id/button15"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/courses" />

    <Button
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="102dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/bus2"
        android:contentDescription="@string/vehicle"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="@+id/button13"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bus2" />

    <Button
        android:id="@+id/button13"
        android:layout_width="129dp"
        android:layout_height="102dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/teachers"
        android:contentDescription="@string/module"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46"
        app:srcCompat="@drawable/teachers" />

    <Button
        android:id="@+id/button15"
        android:layout_width="144dp"
        android:layout_height="99dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/students"
        android:contentDescription="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/students" />

    <Button
        android:id="@+id/button6"
        android:layout_width="142dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:background="@drawable/group"
        android:contentDescription="@android:string/unknownName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dashboard1"
        app:layout_constraintTop_toTopOf="@+id/button9"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/group" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="123dp"
        android:layout_marginTop="396dp"
        android:background="@drawable/classroom"
        android:contentDescription="@android:string/search_go"
        app:layout_constraintEnd_toEndOf="@+id/button15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button15"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/classroom" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="301dp"
        android:layout_height="38dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>