<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F68159"
    tools:context=".teacherSignIn"
    tools:ignore="GoogleAppIndexingWarning">

    <EditText
        android:id="@+id/email_address"
        android:layout_width="200dp"

        android:layout_height="40dp"
        android:autofillHints="on"
        android:drawableStart="@drawable/ic_action_user"
        android:drawableLeft="@drawable/ic_action_user"
        android:hint="@string/prompt_email"

        android:inputType="none|text"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.351"
        tools:text="Email"
        tools:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="199dp"
        android:layout_height="65dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/reading" />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="40dp"

        android:autofillHints="on"
        android:drawableStart="@drawable/ic_action_user"
        android:drawableLeft="@drawable/ic_action_user"
        android:hint="@string/username"
        android:inputType="none|text"
        android:text=""
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.125"
        tools:text="Username"
        tools:textSize="18sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:layout_marginBottom="32dp"
        android:autofillHints="on"
        android:drawableStart="@drawable/ic_action_lock"
        android:drawableLeft="@drawable/ic_action_lock"
        android:hint="@string/password"
        android:inputType="none|textPassword"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"

        app:layout_constraintVertical_bias="0.614"
        tools:text="Password"
        tools:textSize="18sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="289dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="84dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="25dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="245dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"

                android:text="SignIn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.32"
                tools:textSize="18sp" />

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="189dp"
        android:layout_height="22dp"
        android:text="Already have an Account?"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="54dp"
        android:layout_height="23dp"
        android:layout_marginStart="296dp"
        android:layout_marginLeft="296dp"
        android:layout_marginBottom="24dp"
        android:text="LogIn"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>